--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   "dependencies": {
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
+    "leaflet": "^1.9.4",
     "nuxt": "^3.13.0",
     "vue": "latest",
     "vue-router": "latest",
+    "vue-toastification": "^2.0.0-rc.5",
     "vue3-tabs-component": "^1.3.7"
   }
 }
