--- a/package.json
+++ b/package.json
@@ -10,11 +10,12 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@chenfengyuan/vue-countdown": "^2.1.2",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
     "leaflet": "^1.9.4",
     "nuxt": "^3.13.0",
-    "vue": "latest",
+    "vue": "^3.5.12",
     "vue-router": "latest",
     "vue-toastification": "^2.0.0-rc.5",
     "vue3-tabs-component": "^1.3.7"
